--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "apache-nifi-site",
   "version": "0.0.1-incubating",
   "devDependencies": {
-    "assemble": "~0.4.42",
-    "grunt": "~0.4.5",
+    "assemble": "^0.4.42",
+    "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-concat": "^0.5.0",
