--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,8 @@
   "version": "0.0.1-incubating",
   "private": "true",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
-  },
-  "devDependencies": {
-    "font-awesome": "~4.3.0"
+    "foundation": "~5.5.1",
+    "font-awesome": "~4.3.0",
+    "webfontloader": "~1.5.14"
   }
 }
